# tapri

./: .editorconfig  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: django.yml
tapri/: asgi.py  settings.py  urls.py  wsgi.py
